// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Admin /> renders correctly calls getDashboardAnalytics prop 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h1>
        edX Learner and Progress Report
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h2>
        Overview
      </h2>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <h2>
        Full Report
      </h2>
      <div>
        <div
          className="alert fade alert-warning show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            There are no course enrollments.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <p>
        For more information, contact edX Enterprise Support at 
        <a
          href="mailto:enterprise@edx.org"
          onClick={null}
          target="_self"
        >
           enterprise@edx.org
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`<Admin /> renders correctly with dashboard analytics data 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h1>
        edX Learner and Progress Report
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h2>
        Overview
      </h2>
      <div
        className="row mt-3 equal-col-height"
      >
        <div
          className="col-xs-12 col-md-6 col-xl-3 mb-3"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title d-flex align-items-center justify-content-between"
              >
                <span
                  className="title"
                >
                  X
                </span>
                <div>
                  <span
                    aria-hidden={true}
                    className="fa fa-users d-flex align-items-center justify-content-center"
                    id="Icon1"
                  />
                </div>
              </h5>
              <p
                className="card-text"
              >
                total number of learners registered
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 col-md-6 col-xl-3 mb-3"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title d-flex align-items-center justify-content-between"
              >
                <span
                  className="title"
                >
                  1
                </span>
                <div>
                  <span
                    aria-hidden={true}
                    className="fa fa-check d-flex align-items-center justify-content-center"
                    id="Icon1"
                  />
                </div>
              </h5>
              <p
                className="card-text"
              >
                learners enrolled in at least one course
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 col-md-6 col-xl-3 mb-3"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title d-flex align-items-center justify-content-between"
              >
                <span
                  className="title"
                >
                  1
                </span>
                <div>
                  <span
                    aria-hidden={true}
                    className="fa fa-eye d-flex align-items-center justify-content-center"
                    id="Icon1"
                  />
                </div>
              </h5>
              <p
                className="card-text"
              >
                active learners in the past week
              </p>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 col-md-6 col-xl-3 mb-3"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title d-flex align-items-center justify-content-between"
              >
                <span
                  className="title"
                >
                  1
                </span>
                <div>
                  <span
                    aria-hidden={true}
                    className="fa fa-trophy d-flex align-items-center justify-content-center"
                    id="Icon1"
                  />
                </div>
              </h5>
              <p
                className="card-text"
              >
                course completions
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <h2>
        Full Report
      </h2>
      <div>
        <div
          className="alert fade alert-warning show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            There are no course enrollments.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <p>
        For more information, contact edX Enterprise Support at 
        <a
          href="mailto:enterprise@edx.org"
          onClick={null}
          target="_self"
        >
           enterprise@edx.org
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`<Admin /> renders correctly with error state 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h1>
        edX Learner and Progress Report
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h2>
        Overview
      </h2>
      <div
        className="alert fade alert-danger show"
        hidden={false}
        role="alert"
      >
        <div
          className="alert-dialog"
        >
          There was a problem fetching dashboard data: Network Error
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <h2>
        Full Report
      </h2>
      <div>
        <div
          className="alert fade alert-warning show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            There are no course enrollments.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <p>
        For more information, contact edX Enterprise Support at 
        <a
          href="mailto:enterprise@edx.org"
          onClick={null}
          target="_self"
        >
           enterprise@edx.org
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;

exports[`<Admin /> renders correctly with loading state 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h1>
        edX Learner and Progress Report
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <h2>
        Overview
      </h2>
      <div
        className="loading"
      >
        <p>
          Loading...
        </p>
      </div>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <h2>
        Full Report
      </h2>
      <div>
        <div
          className="alert fade alert-warning show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            There are no course enrollments.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row mt-4"
  >
    <div
      className="col"
    >
      <p>
        For more information, contact edX Enterprise Support at 
        <a
          href="mailto:enterprise@edx.org"
          onClick={null}
          target="_self"
        >
           enterprise@edx.org
        </a>
        .
      </p>
    </div>
  </div>
</div>
`;
